<resources>

    <string name="app_name">KerdoIndexTRAINER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameReference">Under this name, you will be displayed at the sportsmans.</string>
    <string name="your_name_in_kerdoindex_inTextField">Your name in KerdoIndex</string>
    <string name="loginReference">The specified email address will be used to log in to the application.</string>
    <string name="your_password_inTextField">Your password</string>
    <string name="your_email_for_login_to_kerdoindex_inTextField">Your Email for login to KerdoIndex</string>
    <string name="back">Back</string>
    <string name="measuring">Measuring</string>
    <string name="KedroIndex1">Index 1:</string>
    <string name="KedroIndex2">Index 2:</string>
    <string name="add_sportsman_title">Add Sportsman</string>
    <string name="sportsman_s_email_address_label">Sportsman\'s email address:</string>
    <string name="email_sportsman_in_edittext">email sportsman</string>
    <string name="the_specified_email_address_will_be_used_to_search_for_information_about_the_athlete">The specified email address will be used to search for information about the athlete.</string>
    <string name="sportsman_not_found_error_label">Sportsman not found</string>
    <string name="sportsman_saved_label">Sportsman saved</string>
    <string name="add">Add</string>
    <string name="offline_mode">offline mode</string>
    <string name="to_display_athletes_you_need_register_or_login">To display athletes, you need register or login</string>
    <string name="to_add_an_athlete_click_the_tower_button">To add an athlete, click the tower button</string>
    <string name="profile">Profile</string>
    <string name="log_in_to_your_kerdoindex_account">Log in to your kerdoIndex account:</string>
    <string name="login">Login</string>
    <string name="name_in_the_kerdoindex">Name in the KerdoIndex:</string>
    <string name="details">Details</string>
    <string name="last_update">Last Update</string>
    <string name="loading_data">Loading data</string>
    <string name="sportsman_not_uploaded_measurements_yet">Sportsman not uploaded measurements yet</string>
    <string name="sportsman_successfully_removed">Sportsman successfully removed</string>
    <string name="delete_sportsman">Delete sportsman</string>
    <string name="qwertyqwerty">qwertyqwertyqwertyqwertyqwertyqwertyqwertyqwertyqwertyqwertyqwertyqwertyqwertyqwertyqwerty</string>
    <string name="about_kerdoindextrainer">About KerdoIndexTRAINER</string>
    <string name="backTo">Back</string>
    <string name="Login">Login</string>
    <string name="registration">Registration</string>
    <string name="forgot_your_password">Forgot your password?</string>

</resources>